# Mlops_creditcardfraud

./: README.md  main.py  mlflow.db  pyproject.toml
notebooks/: 01_mlops_eda.ipynb  dataset.ipynb
notebooks/mlruns/0/models/m-6696775f3b0b4b599c124f797a536096/artifacts/: MLmodel  conda.yaml  model.pkl
